# recipe_manager

./: .gitignore  Makefile  manage.py  pyproject.toml
recipe_manager/: wsgi.py
recipe_manager/config/: settings.py  urls.py
recipe_manager/recipe_manager/: apps.py  urls.py  views.py
recipe_manager/templates/: form.html  index.html
recipe_manager/templates/auth/: login.html
recipe_manager/templates/layout/: base.html
recipe_manager/users/: apps.py  forms.py  urls.py  views.py
recipe_manager/users/migrations/: 0001_initial.py
recipes/: settings.py
