[tool.poetry]
name = "Recipe manager"
version = "0.1.0"
description = ""
authors = ["Rem M. <morrig407@gmail.com>"]
readme = "README.md"
repository = "https://github.com/remortalite/recipe_manager"
packages = [
    { include = "recipe_manager" },
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.1"
python-dotenv = "^1.0.1"
django-extensions = "^3.2.3"
ipython = "^8.27.0"
django-bootstrap5 = "^24.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
django-extensions = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
